# PyVideoKit-CLI

./: .gitignore  README.md  pyproject.toml
src/pyvideokit_cli/: __init__.py  _helpers.py  _main.py  apply_vhs_effect.py  concat_videos.py  convert_to_ffv1.py  extract_audio.py  fade_video.py  prepare_youtube.py  trim_video.py
